# obsidian-web-mcp

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
scripts/launchd/: com.example.vault-mcp.plist
src/obsidian_vault_mcp/: audit.py  auth.py  config.py  context.py  extensions.py  frontmatter_index.py  frontmatter_io.py  models.py  oauth.py  serialization.py  server.py  vault.py  write_events.py
src/obsidian_vault_mcp/tools/: analytics.py  canvas.py  daily.py  manage.py  read.py  search.py  write.py
tests/: test_analytics.py  test_audit.py  test_audit_propagation.py  test_auth.py  test_canvas.py  test_config.py  test_daily_notes.py  test_extensions.py  test_forwarded_host.py  test_frontmatter_io.py  test_frontmatter_preservation.py  test_heartbeat.py  test_issues_5_28.py  test_mcp_path.py  test_oauth.py  test_search_argv_injection.py  test_serialization_encoding.py  test_serialization_scale.py  test_tools.py  test_write_binary.py  test_write_events.py  test_write_listener_integration.py
tests/fixtures/udhr/: README.md  arabic.txt  chinese.txt  french.txt  greek.txt  hebrew.txt  hindi.txt  japanese.txt  korean.txt  russian.txt  thai.txt
